@@ -1,4 +1,11 @@
-Welcome to FullBooker. We update the app as often as possible to make it faster and more reliable for you. In case of any feedback, please contact us via via +254717356476
-What's new:
+Welcome to FullBooker! We’re constantly improving the app to enhance your experience.
 
-- This is the first version of the app
+What's New:
+
+1. Sign in with email and password
+2. Sign in with Google
+3. Create an account and sign in instantly
+4. Reset your password  
+5. UI enhancements – Enjoy a cleaner, more polished look throughout the app.
+
+Need help or have feedback? Contact us at +254717356476
